--- a/band_02/spielhilfen/encounter.tex
+++ b/band_02/spielhilfen/encounter.tex
@@ -58,11 +58,11 @@ Hat man dagegen einen genauen Bodenplan, kann der betroffene Spieler sich schon 
 \neueseite
 
 \absatz{Rollen im Kampf}
-Oft ist es schwierig für den Spielleiter, neben der korrrekten regeltechnischen Umsetzung des Kampfes auch noch für alle Gegner interessante und glaubwürdige Handlungen zu improvisieren.
-Als Hilfestellung kann er die Gegner in Rollen einteilen, wie zum Beispiel Anführer, Frontsau oder Artillerie.
+Oft ist es schwierig für die SL, neben der korrrekten regeltechnischen Umsetzung des Kampfes auch noch für alle Gegner interessante und glaubwürdige Handlungen zu improvisieren.
+Als Hilfestellung kann er die Gegner in Rollen einteilen, wie zum Beispiel \textit{Anführer}, \textit{Frontsau} oder \textit{Artillerie}.
 Sie geben dem Spielleiter eine Idee, wie der entsprechende Gegner sich im Kampf verhalten wird.
-Ein Gegner kann dabei mehrere Rollen gleichzeitig ausfüllen. So könnte der Anführer gleichzeitig ein Armbrustschütze sein (Artillerie)
-oder mit Plattenrüstung und Hellebarde eine Frontsau. 
+Ein Gegner kann dabei mehrere Rollen gleichzeitig ausfüllen. So könnte der \textit{Anführer} zugleich Armbrustschütze sein (\textit{Artillerie})
+oder -- mit Plattenrüstung und Hellebarde -- \textit{Frontsau}. 
 
 Diese Rollen sind dabei bewusst zunächst einmal unabhängig von Spielwerten, auch wenn sich bestimmte Gegner natürlich jeweils mehr oder weniger anbieten.
 Aber auch ein unerfahrener Bauer kann ein Anführer sein, wenn es darum geht seine Familie zu rächen.
@@ -94,9 +94,12 @@ Beispiele: Söldnerkommandant (\textit{Ilaris:107}). Hummerier-Priester (s.\,u.)
 Die Artillerie bedeckt die SCs aus größerer Distanz oder aus schwer zu erreichender Position mit Fernkampfangriffen oder Zaubern.
 Besonders nahkampfstark sieht sie nicht aus, aber will ich die Zeit investieren und eventuelle Passierschläge in Kauf nehmen um dort rüber zu laufen?
 
+Beispiele: Burgwache mit Armbrust. Elementarist (s.\,u.).
+
+
+
 \unterabsatz{Frontsau}
 
-\zeichnung{Kämpfer.jpg}
 
 Die Frontsau ist ein starker Nahkämpfer, der sowohl austeilen als auch einstecken kann.
 Sie ist üblicherweise das naheliegenste Ziel für einen Angriff der Helden, wenn auch nicht unbedingt das taktisch klügste.
@@ -104,7 +107,8 @@ Ignoriert man sie, bedankt sie sich mit voller Offensive, Passierschlägen oder 
 
 Beispiele: Kriegsoger (\textit{Ilaris:203}). Hummerier-Soldat (s.\,u.). 
 
-Beispiele: Burgwache mit Armbrust. Elementarist (s.\,u.).
+\zeichnung{Kämpfer.jpg}
+
 \unterabsatz{Assassine}
 Der Assassine taucht bevorzugt bei einzeln stehenden, verwundbaren SCs auf.
 Dazu setzt er überlegene Mobilität und/oder Heimlichkeit ein.
@@ -135,6 +139,8 @@ Oder lieber den Ungerüsteten mit dem kleinen Streitkolben?
 Wir gehen im folgenden auf einige grundlegende Stellschrauben ein, die das Ilaris-Regelwerk in dieser Hinsicht bietet.
 Generell gilt dabei: Im besten Fall kann man aus der Beschreibung der SL erahnen, dass ein Gegner über bestimmte Fähigkeiten verfügt.
 Ein dem Aussehen nach simples Skelett, das mich one-hittet, weil es mit 12x \emph{starke Offensive} ausgestattet wurde, macht keinen Spaß.
+\platz
+
 
 \unterabsatz{Offensive}
 Ein offensivstarker Gegner in Ilaris zeichnet sich üblicherweise durch hohe AT (Attacke) oder hohen Schaden aus.
@@ -156,13 +162,18 @@ Also \biglittlecap{Höllenpein}, \biglittlecap{Paralysis} und dergleichen mit Be
 
 \unterabsatz{Defensive}
 Analog zu AT und Schaden gibt es in der Defensive die Stellschrauben VT (\textit{Verteidigung}) und \textit{Wundschwelle}.
-Auch hier kannst du durch Variation das Spiel interessanter machen.
+Auch hier macht Variation das Spiel interessanter.
 
 Die \textit{Wundschwelle} hat dabei noch detailliertere Aspekte. Erstens wäre der \textit{Rüstungsschutz} zu nennen, den man mit \textit{rüstungsbrechend}en Waffen kontern kann. Und zweitens die Kreatureneigenschaft \textit{Koloss} (\textit{Ilaris:96}). Man kann die WS halbieren und dafür eine Stufe \textit{Koloss} geben. Die Regeln lesen sich so, als würde man das nur machen, damit die WS nicht unmöglich hoch wird. Tatsächlich hat es aber einen weiteren ganz entscheidenden Effekt: Es halbiert den Schaden aus \textit{Todesstoß}. Wenn du also findest, dass \textit{Todesstoß} zu sehr dominiert, bringe öfter mal \textit{Koloss}e mit niedrigerer \textit{Wundschwelle}. Dies ist zum Beispiel passend bei Schwärmen, fettleibigen aber labbrigen Zombies oder amorphen Schleimungeheuern. 
-
 \neuespalte
 
+\mbox{}
+
+\platz
+
 Für die Verteidigung gegen Fernkampf braucht es eine Schild-VT oder eine Akrobatik Probe (28). Leider fehlt ein Wert dafür bei fast allen Kreaturen im Bestiarium. Wenn unklar, würde ich die schlechteste Nahkampf-VT verwenden. Gibt es in deiner Gruppe starke Fernkämpfer, kannst du ihnen hin- und wieder Gegner mit hoher Schild-VT entgegenstellen.
+
+\smallskip
 
 Ein weiterer sehr relevanter Defensivwert ist die \textit{Magieresistenz}.
 Wenn dein Magier sich nutzlos fühlt, setze ihm mal einen Leibwächter vor, der kaum zu treffen ist, den er aber spielend paralysiert.
@@ -259,8 +270,6 @@ Unüberwindbar wäre zum Beispiel eine Höhlenwand. Ein Seidenvorhang dagegen bl
 
  Versuche mit solchen Elementen ein interessantes Schlachtfeld zu gestalten, das auf deine Battlemap/deine Skizze/deinen Tisch passt, und trotzdem genug Raum für taktische Bewegung liefert. 
 
-\neuespalte
-
 \unterabsatz{Objekte}
 Konkret genannte oder gemalte Objekte wie herumstehende Kisten, Krüge, Kronleuchter oder ähnliches können deine Spieler auf Ideen bringen.
  Vielleicht können sie als Deckung oder für untypische Kampfaktionen genutzt werden.
@@ -277,10 +286,13 @@ Arbeit, die du dir sparen kannst!
 Für größere Schlachten eigenen sich auch die offiziellen Stadtpläne für aventurische Städte, zum Beispiel während einer Belagerung.
 Wenn Initiative ausgerufen wird, kannst du dann für entsprechende Ausschnitte eine Skizze in passendem Maßstab anfertigen.
 
-\spaltenende
+\platz
+
+\zeichnung{zwerg.JPG}
+
+\platz
 
 \absatz{Wie viel darf es sein?}
-\spaltenanfang
 Wir haben einige Gedanken entwickelt, was wir in einen Kampf werfen könnten, um diesen spannend und abwechslungsreich zu gestalten.
 Das heißt aber nicht, dass es eine gute Idee ist, alles davon in einem einzigen Encounter unterzubringen.
 Zum einen haben wir schon angesprochen, dass die Szene auch irgendwie in die Spielwelt passen sollte.
@@ -289,21 +301,28 @@ Aber fast wichtiger ist noch eine andere Einschränkung:
 Du und deine Spieler seid Menschen mit endlicher Hirnkapazität. Wenn du das gesamte Regelwerk in einem Kampf abfeuern willst, mit 13 verschiedenen Gegnertypen, etlichen Zwischenzielen, verschiedenstem Terrain und explodierenden Amphoren, wirst du deine Spieler überfordern -- und schon viel früher dich selbst.
 Denn als Spielleiter musst du das ganze ja verwalten und managen. 
 
+
 Wie viel man im Kopf behalten kann und will, ist sicher unterschiedlich.
 Als Faustregel kann man vielleicht sagen, dass drei Gegnertypen, die sich wirklich unterscheiden und die unterschiedliche Rollen im Kampf einnehmen, eigentlich genug sind.
 Vermeiden sollte man dagegen irrelevante Unterschiede, also zum Beispiel 5 Söldner, die alle irgendwie +1/-1 auf \textit{Attacke}, \textit{Verteidigung} oder \textit{Wundschwelle} haben.
  Solche marginalen Differenzen sind unsere Aufmerksamkeit nicht wert. Stattdessen lieber 2 Söldner in Kettenhemd mit Kriegshammer (Frontsau, einer zudem Anführer), 2 ungerüstet mit Bogen und Dolch (Artillerie) und einer mit zwei Schwertern in Leder (Assassine: Hält sich zu Beginn noch versteckt und macht dann Sturmangriff auf die hintere Reihe).
+ 
+ \neueseite
  
   Auch bei interessanter Umgebung kann weniger mehr sein, wobei es dort oft kein Beinbruch ist, wenn man Elemente ignoriert/vergisst:
   Wenn keiner am Kronleuchter schwingen will, ist das eben so.
   Vermutlich heißt das, dass der Kampf auch ohne dieses Feature spannend war -- um so besser.
   Wenn du dagegen auf Gegnerseite einen Magier aufstellst, kannst du diesen schlecht einfach nichts tun zu lassen, weil dir gerade seine Zauber entfallen sind.
 
-Speziell zu Magiern oder ähnlichen Gegnern:
+\bigskip
+
+Speziell zu \textbf{Magiern} oder ähnlichen Gegnern:
 Es kann sehr hilfreich sein, wenn du deren Zauberauswahl (für diesen Kampf) auf 1--3 beschränkst und die Regeln bereit hältst, zum Beispiel als Manöverkarten.
 Klar, wahrscheinlich kann der NSC mehr, aber du als Spielleiter möchtest vermutlich nicht neben allem anderen auch noch den optimalen Zauber aus einer längeren Liste wählen, zudem auch noch in passender Modifikation.
-Stattdessen setzen wir: Der Borbaradianer macht den \biglittlecap{Höllenpein} mit 1x\textit{Vorbereitung verkürzen} gegen einzelne Ziele, \biglittlecap{Tlalucs Odem} mit 2x\textit{Vorbereitung verkürzen}  als Flächenschaden oder er beschwört einen Dämon, wenn er glaubt, die Aktion Konzentration für die Beherrschung aufbringen zu können.
+Stattdessen setzen wir: Der Borbaradianer macht den \biglittlecap{Höllenpein} mit 1\,x\,\textit{Vorbereitung verkürzen} gegen einzelne Ziele, \biglittlecap{Tlalucs Odem} mit 2\,x\,\textit{Vorbereitung verkürzen}  als Flächenschaden oder er beschwört einen Dämon, wenn er glaubt, die Aktion Konzentration für die Beherrschung aufbringen zu können.
 Das ist bereits einiges zum Durchlesen bei der Vorbereitung und wird uns reichen, wenn wir nebenher noch seine zwei Handlanger und die Hauschimäre spielen müssen. 
+
+\bigskip
 
 Statt also alles in einen Encounter zu packen, greife dir einige Aspekte heraus, die dir passend scheinen. Vielleicht kannst du dich dabei an der dramatischen Frage orientieren.
 Oder du gibst deinem Encounter einen Titel wie \enquote{Schusswechsel am Hafen}, der dich bei der Vorbereitung (oder der Improvisation) leitet.
@@ -320,17 +339,26 @@ So hast du Ideen für weitere Kämpfe, und jeder wird sich anders anfühlen!
 
 \neueseite
 
-\abschnitt{Das Ritual der Reinigung}
 \begin{center}
-    Ein Kampf-Encounter für das kostenlose P\&P Regelwerk {\link{https://ilarisblog.wordpress.com/downloads/}{Ilaris}}
+
+\abschnitt{Das Ritual der Reinigung}
+	
+	\usekomafont{subsection}
+    Ein Kampf-Encounter für das kostenlose P\&P-Regelwerk {\link{https://ilarisblog.wordpress.com/downloads/}{Ilaris}}
+    \normalfont \normalsize
+    
+    \credit{Autor}{Arne Strehlow}
+   
 \end{center}
 \spaltenanfang
 
 Hier stellen wir einen Encounter vor, der einige der oben genannten Tipps umsetzt.
 Wir haben den Kampf in zwei Phasen unterteilt, so dass die SCs zwischendurch Zeit haben, sich zu sammeln oder Vorbereitungen zu treffen.
-Zum Beispiel könnten sie sich rüstungsbrechende Waffen beschaffen, oder die Stadtwache konsolidieren und effektiv einbinden.
-Phase 1 dient in diesem Sinne als eine Art Ankündigung, die die SCs auf die Art der Bedrohung aufmerksam machen und Spannung aufbauen soll.
-Phase 2 ist dann das epische Finale. 
+Zum Beispiel könnten sie sich \textit{rüstungsbrechend}e Waffen beschaffen, oder die Stadtwache konsolidieren und effektiv einbinden.
+
+\textbf{Phase 1} dient in diesem Sinne als eine Art Ankündigung, die die SCs auf die Art der Bedrohung aufmerksam machen und Spannung aufbauen soll.
+
+\textbf{Phase 2} ist dann das epische Finale. 
 
 \unterabsatz{Encounter-Schwierigkeit}
 Dieser Encounter ist für eine gut ausgestattete Heldengruppe mit Kampffertigkeiten um die 16 sowie \textit{Hammerschlag}/\textit{Todesstoß} im Repertoire gedacht.
@@ -346,91 +374,129 @@ Doch was ist das? monströse Gestalten erheben sich aus dem Wasser. Hätte man d
 Es braucht also tapfere Recken, um sie zu schützen.
 
 \unterabsatz{Dramatische Frage}
-Werden die Hummerier es schaffen, das Ritual zu stören? Dies tun sie, falls die Efferdgeweihten ihre Konzentration aufgeben müssen. Falls es sich anbietet, machen die Hummerier nebenher auch gerne Beute in Form von Fleisch, Waffen oder Wertgegenständen. Gegen entschiedenem Widerstand braucht es allerdings den Hummerier Priester, der als Einziger ein persönliches Interesse an der Mission hat.
+Werden die Hummerier es schaffen, das Ritual zu stören? Dies tun sie, falls die Efferdgeweihten ihre Konzentration aufgeben müssen.
+
+Falls es sich anbietet, machen die Hummerier nebenher auch gerne Beute in Form von Fleisch, Waffen oder Wertgegenständen. Gegen entschiedenem Widerstand braucht es allerdings den \textbf{Hummerier-Priester}, der als Einziger ein persönliches Interesse an der Mission hat.
 
 \unterabsatz{Battlemap}
-Dieser Encounter ist relativ generisch und soll felxibel einsetzbar sein. Am besten nutzt du den offiziellen Stadtplan der Stadt in der du ihn verwendest als Übersicht. Für relevante Ausschnitte wie den Anleger kannst du eine Skizze in detaillierterem Maßstab anfertigen, oder einen herangezoomten Ausschnitt verwenden. Vielleicht ergeben sich aus dieser Kartere weitere taktische Ideen. Von einem benachbarten Anleger könnte ein Fernkämpfer zum Beispiel einen besseren Winkel auf kletternde Humemrier haben, muss sich dafür aber für eine Seite entscheiden. 
-\newline
-Schön wäre es natürlich, mit so einer Spielhilfe auch eine konkrete Beispielkarte zu präsentieren. Leider fehlen uns dafür die Künstler.
+Dieser Encounter ist relativ generisch und soll flexibel einsetzbar sein. Am besten nutzt du den offiziellen Stadtplan der Stadt, in der du ihn verwendest, als Übersicht.
+Für relevante Ausschnitte wie den Anleger kannst du eine Skizze in detaillierterem Maßstab anfertigen, oder einen herangezoomten Ausschnitt verwenden.
+Vielleicht ergeben sich aus dieser Karte weitere taktische Ideen. Von einem benachbarten Anleger könnte ein Fernkämpfer zum Beispiel einen besseren Winkel auf kletternde Humemrier haben, muss sich dafür aber für eine Seite entscheiden. 
+%\newline
+%Schön wäre es natürlich, mit so einer Spielhilfe auch eine konkrete Beispielkarte zu präsentieren. Leider fehlen uns dafür die Künstler.
 
 \unterabsatz{Regeltechnisches}
-Ein zentrales Regelthema dieses Encounters ist hoher Rüstungsschutz, dem die SCs mit dem Manöver Rüstungsbrecher (benötigt entsprechende Waffe) oder \textit{Todesstoß} beikommen können. Beschreibe am besten gleich bei der ersten Sichtung den dicken, warzigen Panzer der Hummerier. Eine Probe auf Sagen \& Legenden (16) kann offenbaren, dass die Biester unter dem Panzer relativ weich sind, etwa wie ein Mensch in Plattenrüstung. 
+Ein zentrales Regelthema dieses Encounters ist hoher Rüstungsschutz, dem die SCs mit dem Manöver \textit{Rüstungsbrecher} (benötigt entsprechende Waffe) oder \textit{Todesstoß} beikommen können.
+Beschreibe am besten gleich bei der ersten Sichtung den dicken, warzigen Panzer der Hummerier. Eine Probe auf \textit{Sagen \& Legenden} (16) kann offenbaren, dass die Biester unter dem Panzer relativ weich sind, etwa wie ein Mensch in Plattenrüstung. 
 
-
-Mache dich ansonsten mit einigen Kampf-Vorteilen und übernatürlichen Talenten der Hummerier vertraut. Die wichtigsten könnten zum Beispiel sein: Offensiver Kampfstil (Soldat), Schildwall und Gegenhalten (Leibwächter), Befreiungsschlag und Ertränken (Priester), Aquasphaero (Elementarist). 
+Mache dich ansonsten mit einigen Kampf-Vorteilen und übernatürlichen Talenten der Hummerier vertraut. Die wichtigsten könnten zum Beispiel sein: \textit{Offensiver Kampfstil} (\textbf{Soldat}), \textit{Schildwall} und \textit{Gegenhalten} (\textbf{Leibwächter}), \textit{Befreiungsschlag} und \textit{Ertränken} (\textbf{Priester}), \biglittlecap{Aquasphaero} (\textbf{Elementarist}). 
 
 \unterabsatz{Phase 1}
-Angeführt von einem Leibwächter versuchen 3 Soldaten den Pier zu erklimmen, bzw ihre Kameraden dabei zu decken. Von oben hat man immerhin eine erhöhte Position und kann sie vielleicht daran hinern. Dies versucht zumindest der örtliche Rondrageweihte mit seinem Knappen, während der adelige Stadtherr nur ruft \enquote{Seid ihr Wahnsinnig? Zieht euch vom Anleger zurück!}, und so die Stadtwache vorerst davon abhält einzugreifen. Die Efferdgeweihten jedoch scheinen willens ihr Leben zu geben. Oder sind sie so tief in ihre Gesänge versunken, dass sie die Gefahr nicht bemerken? Sollten die Hummerier auf effektiven Widerstand stoßen, ziehen sie sich vorerst zurück. 
+Angeführt von einem \textbf{Leibwächter} versuchen drei \textbf{Soldaten} den Pier zu erklimmen, beziehungsweise ihre Kameraden dabei zu decken. Von oben hat man immerhin eine erhöhte Position und kann sie vielleicht daran hindern.
+Dies versucht zumindest der örtliche Rondrageweihte mit seinem Knappen, während der adelige Stadtherr nur ruft: \enquote{Seid ihr wahnsinnig? Zieht euch vom Anleger zurück!}, und so die Stadtwache vorerst davon abhält, einzugreifen.
+Die Efferdgeweihten jedoch scheinen willens, ihr Leben zu geben.
+Oder sind sie so tief in ihre Gesänge versunken, dass sie die Gefahr nicht bemerken?
+Sollten die Hummerier auf effektiven Widerstand stoßen, ziehen sie sich vorerst zurück. 
 \smallskip 
 \newline 
-\textbf{Regeln}
-Zum Erklimmen des Piers ist eine Aktion Konzentration erforderlich. Beachte die Regeln zur Konzentration, insbesondere die Möglichkeit diese zu unterbrechen (Regelwerk Seite 37). Gelingt dies bevor der Kletterer das nächste mal am Zug ist, fällt er zurück ins Wasser. \newline
-Vom Pier aus gegen Wesen im Wasser hat mein eine überlegene Position (+4). Um von oben ins Wasser, oder umgekehrt, angreifen zu können, benötigt man allerdings Reichweite 2. (Kletterer können von oben und unten auch mit kürzeren Waffen erreicht werden.) \newline
-Wer an Rand des Piers stürzt würfelt einen W6. Bei 1-2 endet der Sturz im Wasser. (Achtung, sehr tötlich. Wenn SC-Tode nicht gewünscht sind, vielleicht besser weglassen.)
-\smallskip 
-\newline 
-\textbf{Gegner} (alles Hummerier) \newline
-Stoßtrupp: 1 Leibwächter (Anführer, Beschützer, hat Befehl das Ritual zu stören, möchte aber gerne alle seine Jungs wieder sicher nach Hause bringen), 3 Soldaten (Frontsau)
+\minisec{Regeln}
+Zum Erklimmen des Piers ist eine Aktion \textit{Konzentration} erforderlich. Beachte die Regeln zur Konzentration, insbesondere die Möglichkeit diese zu unterbrechen (\textit{Ilaris:37}).
+Gelingt dies bevor der Kletterer das nächste mal am Zug ist, fällt er zurück ins Wasser. 
+
+Vom Pier aus hat man eine \textit{überlegene} Position gegen Wesen im Wasser  (+4). Um von oben ins Wasser, oder umgekehrt, angreifen zu können, benötigt man allerdings Reichweite 2. (Kletterer können von oben und unten auch mit kürzeren Waffen erreicht werden.)
+
+Wer an Rand des Piers stürzt, würfelt einen W6. Bei 1-2 endet der Sturz im Wasser. (Achtung, sehr tödlich. Wenn SC-Tode nicht gewünscht sind, vielleicht besser weglassen.)
+
+\minisec{Gegner} (alles Hummerier) \newline
+Stoßtrupp: 1 Leibwächter (Anführer, Beschützer, hat Befehl das Ritual zu stören, möchte aber gerne alle seine Jungs wieder sicher nach Hause bringen),
+
+3 Soldaten (Frontsau)
 
 \unterabsatz{Phase 2}
-Sollten die ersten Hummerier keinen Erfolg haben, ziehen sie sich zurück und warten auf Verstärkung. Immer wieder sieht man ein Wesen in 100 Schritt Entfernung  kurz auftauchen und das Ritual beobachten. Die Flut scheint unnatürlich schnell zu kommen (der Hummerier-Priester setzt \enquote{Gebieter der Gezeiten} ein.) Nach etwa einer halben Stunde gehen zwei Hummerier-Ablenkungstrupps an einem einfacher zugänglichen Ufer an Land und greifen wahllos die Stadtbevölkerung an. Sie sollen Verteidiger vom Pier abziehen. Kurz darauf versucht ein Angriffstrupp erneut den Pier zu erklimmen. 
+Sollten die ersten Hummerier keinen Erfolg haben, ziehen sie sich zurück und warten auf Verstärkung. Immer wieder sieht man ein Wesen in 100 Schritt Entfernung  kurz auftauchen und das Ritual beobachten. Die Flut scheint unnatürlich schnell zu kommen (der Hummerier-Priester setzt \enquote{Gebieter der Gezeiten} ein).
 
-Währenddessen heben sich in etwa 60 Schritt Entfernung Gestalten aus dem Wasser. Ein Hummerier-Elementarist formt dort einen Aquasphaero (mit Zeit lassen, doppelter Wirkungsdauer und 3x Mächtiger Magie, benötigt eine gewürfelte 5). Anschließend fliegt der Wasserball 4 Runden lang auf die Efferdgeweihten zu. Der Hummerier muss sich derweil auf seinen Zauber Konzentrieren. Sollte der Ball eintreffen werden die Geweihten vermutlich die Konzentration verlieren und das Ritual scheitert. Der Elementarist schickt weitere Aquasphaeri, solange er nicht dabon abgehalten wird.
+Nach etwa einer halben Stunde gehen zwei Hummerier-Ablenkungstrupps an einem einfacher zugänglichen Ufer an Land und greifen wahllos die Stadtbevölkerung an. Sie sollen Verteidiger vom Pier abziehen. Kurz darauf versucht ein Angriffstrupp erneut, den Pier zu erklimmen. 
 
-Wir empfehlen die Ablenkungstrupps nur dann detailliert nach Kampfregeln auszuspielen, wenn die SCs direkt mit diesen interagieren. Sonst kannst du deren Erfolg nach den Regeln des Massenkampfes bestimmen (Regelwerk S.60), oder einfach frei nach SL Entscheid erzählen.
+Währenddessen heben sich in etwa 60 Schritt Entfernung Gestalten aus dem Wasser. Ein Hummerier-Elementarist formt dort einen \biglittlecap{Aquasphaero} (mit Zeit lassen, doppelter Wirkungsdauer und 3\,x\,\textit{Mächtiger Magie}, benötigt eine gewürfelte 5). Anschließend fliegt der Wasserball 4 INI-Phasen lang auf die Efferdgeweihten zu.
+Der Hummerier muss sich derweil auf seinen Zauber \textit{konzentrieren}.
+Sollte der Ball eintreffen werden die Geweihten vermutlich die Konzentration verlieren und das Ritual scheitert.
+
+Der Elementarist schickt weitere \biglittlecap{Aquasphaeri}, solange er nicht davon abgehalten wird.
+
 \smallskip
-\newline
-\textbf{Regeln}
-Der Pier gibt wegen dem höheren Wasserstand nur noch vorteilhafte Position (+2) und es benötigt nur noch eine Aktion Bewegung diesen zu erklimmen. \newline
-Der Elemetarist benötigt Konzentration, um seinen Aquasphaero zu lenken (siehe Regelwerk S.139). Er kann also auch während der Wasserball fliegt noch gestört werden. Beim zweiten Mal verwendet er dann alledings eventuell die Modifikation \enquote{vorgegebene Bewegung}.
-\smallskip 
-\newline 
-\textbf{Gegner} (alles Hummerier)  \newline
-2x Ablenkungstrupp: Ein Leibwächter (Anführer, Beschützer, hat Befehl durch Blutbad für Ablenkung zu sorgen, möchte aber gerne alle seine Jungs wieder sicher nach Hause bringen), 3 Soldaten (Frontsau)
-\newline
-1x Angriffstrupp: 1 Priester (Anführer, Frontsau), 4 Soldaten (Frontsau)
-\newline
-1x Magietrupp: 1 Elementarist (Artillerie, Zeitdrücker), 1 Leibwächter (Beschützer)
 
-In diese Anzahl Hummerier sind jene aus Phase 1 eingerechnet. Sie sind dem entsprechend eventuell verwundet oder nehmen sogar gar nicht mehr am Kampf teil. (Ab 4 Wunden schicken auch die Hummerier ihre Kameraden nicht zurück aufs Schlachtfeld.) Der Priester teilt die Trupps entsprechend anders ein.
+Wir empfehlen die Ablenkungstrupps nur dann detailliert nach Kampfregeln auszuspielen, wenn die SCs direkt mit diesen interagieren.
+Sonst kannst du deren Erfolg nach den Regeln des \textit{Massenkampf}s bestimmen (\textit{Ilaris:60}), oder einfach frei nach SL-Entscheid erzählen.
+
+
+\minisec{Regeln}
+Der Pier gibt wegen dem höheren Wasserstand nur noch \textit{vorteilhafte} Position (+2) und es benötigt nur noch eine Aktion \textit{Bewegung} diesen zu erklimmen.
+
+Der Elementarist benötigt \textit{Konzentration}, um seinen \biglittlecap{Aquasphaero} zu lenken (siehe \textit{Ilaris:139}).
+Er kann also auch während der Wasserball fliegt noch gestört werden.
+Beim zweiten Mal verwendet er dann allerdings eventuell die Modifikation \textit{vorgegebene Bewegung}.
+
+\minisec{Gegner} (alles Hummerier)
+\begin{itemize}
+\item 2\,x\,Ablenkungstrupp: Ein Leibwächter (Anführer, Beschützer, hat Befehl durch Blutbad für Ablenkung zu sorgen, möchte aber gerne alle seine Jungs wieder sicher nach Hause bringen), 3 Soldaten (Frontsau)
+\item 1\,x\,Angriffstrupp: 1 Priester (Anführer, Frontsau), 4 Soldaten (Frontsau)
+\item 1x Magietrupp: 1 Elementarist (Artillerie, Zeitdrücker), 1~Leibwächter (Beschützer)
+\end{itemize}
+
+In diese Anzahl Hummerier sind jene aus Phase 1 eingerechnet. Sie sind dementsprechend eventuell verwundet oder nehmen sogar gar nicht mehr am Kampf teil. (Ab 4 Wunden schicken auch die Hummerier ihre Kameraden nicht zurück aufs Schlachtfeld.) Der Priester teilt die Trupps entsprechend anders ein.
 
 Sollte der Priester fallen, ist der Rest der Hummerier nur noch mäßig motiviert und wird keine größeren Risiken für ihre finstere Göttin mehr eingehen.
 
 \unterabsatz{Zwischenziele (Beispiele)}
-Die Stadtwache zum effektiven Eingreifen bewegen. Die Stadtbewohner schützen. Ein junger Mann wird von sich zurückziehenden Hummeriern ins Wasser gezogen und will gerettet werden (oder der Rondra-Knappe stürzt durch ein Umreißen Manöver vom Pier). Den Elementaristen stoppen.
+\begin{itemize}
+\item Die Stadtwache zum effektiven Eingreifen bewegen.
+\item Die Stadtbewohner schützen.
+\item Ein junger Mann wird von sich zurückziehenden Hummeriern ins Wasser gezogen und will gerettet werden (oder der Rondra-Knappe stürzt durch ein \textit{Umreißen}-Manöver vom Pier).
+\item Den Elementaristen stoppen.
+\end{itemize}
 
 \unterabsatz{Anpassungen}
-Leichter kannst du das Geschehen machen, indem du den Helden mehr Unterstützung von Seiten der Stadt zugestehst, oder weniger Hummerier angreifen lässt. Auch könntest du den Elementaristen ohne Leibwächter an der Seite auftreten lassen. 
-\newline
-Sollte es sich um eine größere Stadt handeln, sind sowohl mehr Kampfkraft der Stadt als auch mehr Angreifer eventuell angemessen. Wie du größere Schlachten abhandelst ist allerdings ine Thema für sich. Du kannst zum Beipsiel nur die Aktionen der Helden detailliert ausspielen und für den Rest der Schlacht alle paar Kampfrunden eine Probe nach den Massenkampfregeln ablegen. (Regelwerk S.60)
-\newline
+Leichter kannst du das Geschehen machen, indem du den Helden mehr Unterstützung von Seiten der Stadt zugestehst, oder weniger Hummerier angreifen lässt.
+Auch könntest du den Elementaristen ohne Leibwächter an der Seite auftreten lassen. 
+
+Sollte es sich um eine größere Stadt handeln, sind sowohl mehr Kampfkraft der Stadt als auch mehr Angreifer eventuell angemessen.
+Wie du größere Schlachten abhandelst, ist allerdings ein Thema für sich.
+Du kannst zum Beispiel nur die Aktionen der Helden detailliert ausspielen und für den Rest der Schlacht alle paar Kampfrunden eine Probe nach den \textit{Massenkampf}regeln (\textit{Ilaris:60}) ablegen. 
+
+
 Um es schwerer zu machen könnte der Elementarist einen Dschinn des Unwassers gebunden haben, der für ihn in den Kampf eingreift. 
-\newline
-Wenn du für mehr Abwechslung unter den Gegnern sorgen möchtest, kannst du natürlich auch andere Wesen einbauen. Vielleicht zum Kontrast welche mit niedrigem Rüstungsschutz? Unwasserelementare oder Charyptide Dämonen könnten passen. Weitere Möglichkeiten wären aufgeweichte Wasserleichen, ungerüstete Krakonier oder ein Krakenmolch. Auch könnte es Verräter in der Stadt geben, zum Beispiel einen charyptiden Kult. Frage dich aber, ob du dich selbst nicht mit so vielen Unterschiedlichen Gegnertypen überforderst. Schließlich muss du alle im Kampf managen!
 
+Wenn du für mehr Abwechslung unter den Gegnern sorgen möchtest, kannst du natürlich auch andere Wesen einbauen. Vielleicht zum Kontrast welche mit niedrigem Rüstungsschutz? Unwasserelementare oder charyptide Dämonen könnten passen. Weitere Möglichkeiten wären aufgeweichte Wasserleichen, ungerüstete Krakonier oder ein Krakenmolch.
 
+Auch könnte es Verräter in der Stadt geben, zum Beispiel einen charyptiden Kult. Frage dich aber, ob du dich selbst nicht mit so vielen unterschiedlichen Gegnertypen überforderst.
+
+Schließlich musst du alle im Kampf managen!
+
+\newpage
 
 \absatz{Hummerier}
-Hummerier sind eine Spezies der Vielbeinigen. Zumindest fassen wir sie hier so auf und klassifizieren sie als Mythenwesen. In der Spielwelt treten sie jedoch auch als Daimonid auf. Eine ausführlichere Beschreibung findest du zum Beispiel in der Spielhilfe Efferds Wogen.
+Hummerier sind eine Spezies der Vielbeinigen. Zumindest fassen wir sie hier so auf und klassifizieren sie als Mythenwesen. In der Spielwelt treten sie jedoch auch als Daimonid auf. Eine ausführlichere Beschreibung findest du zum Beispiel in der Spielhilfe \textit{Efferds Wogen}.
 %\smallskip
 
-Hummerier sehen aus wie aufrechtgehende Hummer, haben einen dicken roten Panzer, Stielaugen und Fühler, vier Arme (davon zwei mit Scheren), einen gepanzerten Schwanz und blaues tintenähnliches Blut. Zu einer Lautsprache sind sie nicht fähig, nichtsdestotrotz sind sie in der Lage, sich untereinander zu verständigen. An Land bewegen sie sich langsam und ungelenk. (Quelle: Wiki)
+\link{https://de.wiki-aventurica.de/wiki/Hummerier_(Spezies)}{Hummerier} sehen aus wie aufrechtgehende Hummer, haben einen dicken roten Panzer, Stielaugen und Fühler, vier Arme (davon zwei mit Scheren), einen gepanzerten Schwanz und blaues, tintenähnliches Blut.
+Zu einer Lautsprache sind sie nicht fähig, nichtsdestoweniger sind sie in der Lage, sich untereinander zu verständigen. An Land bewegen sie sich langsam und ungelenk.
 %\smallskip
 
-Wir stellen hier eine Auswahl an Hummeriern vor, die dazu gedacht sind, eine fordernde Kampfbegegnung darzustellen. Generell ist zu beachten, dass ein Kampf im Wasser den Schwierigkeitsgrad enorm erhöht. Außerdem haben diese Hummerier einen sehr hohen Rüstungsschutz. Als Warnung könntest du Gerüchte über ein Monster mit undruchdringlichem Panzer streuen. Auch könntest du die Gruppe mit einem kleinerern Kampf gegen Krabben in hüfttiefen Wasser auf die entsprechenden Gefahren und Regelmachnismen frühzeitig aufmerksam machen.
+Wir stellen hier eine Auswahl an Hummeriern vor, die dazu gedacht sind, eine fordernde Kampfbegegnung darzustellen. Generell ist zu beachten, dass ein \textit{Kampf im Wasser} den Schwierigkeitsgrad enorm erhöht. Außerdem haben diese Hummerier einen sehr hohen Rüstungsschutz. Als Warnung könntest du Gerüchte über ein Monster mit undruchdringlichem Panzer streuen. Auch könntest du die Gruppe mit einem kleinerern Kampf gegen Krabben in hüfttiefem Wasser auf die entsprechenden Gefahren und Regelmachnismen frühzeitig aufmerksam machen.
 %\smallskip
 
-Ein \textbf{Hummerier Soldat} ist gewissermaßen die Standardausführung der Hummerier. Für eine unerfahrene Heldengruppe ist er trotzdem bereits alleine und an Land ein ernstzunehmender Gegner. Im Wasser ist er selbst für erfahrene Kämpfer eine tödliche Gefahr. 
+Ein \textbf{Hummerier-Soldat} ist gewissermaßen die Standardausführung der Hummerier. Für eine unerfahrene Heldengruppe ist er trotzdem bereits alleine und an Land ein ernstzunehmender Gegner. Im Wasser ist er selbst für erfahrene Kämpfer eine tödliche Gefahr. 
 %\smallskip
 
-Der \textbf{Hummerier Priester} führt einen kleinen Trupp Hummerier auf schwierigen Missionen an. Er kann seine Untergebenen auch dazu bringen, ein Stück ins Landesinnere vorzustoßen. Sollte er fallen, verlieren die restlichen Hummerier ihr Missionsziel aus den Augen und ziehen sich bald ins nächste Gewässer zurück. 
+Der \textbf{Hummerier-Priester} führt einen kleinen Trupp Hummerier auf schwierigen Missionen an. Er kann seine Untergebenen auch dazu bringen, ein Stück ins Landesinnere vorzustoßen. Sollte er fallen, verlieren die restlichen Hummerier ihr Missionsziel aus den Augen und ziehen sich bald ins nächste Gewässer zurück. 
 %\smallskip
 
-Der \textbf{Hummerier Elementarist} befindet sich gerne in schwer zu erreichender Position. Zum Beispiel schwimmend im Meer bei einem Angriff auf einen Hafen. Von dort webt er Aquasphaeros und lenkt diese (braucht Konzentration), hebt die Scheren zur Anrufung eines Elementars, o.ä.. Dies soll die SCs vor die Entscheidung stellen, ob und wie sie ihn beim Zaubern stören. Dabei kann man den SCs mit 'Vorbereitung verkürzen'/'Zeit lassen' das Unterbrechen schwerer/einfacher machen. 
+Der \textbf{Hummerier-Elementarist} befindet sich gerne in schwer zu erreichender Position -- zum Beispiel schwimmend im Meer bei einem Angriff auf einen Hafen. Von dort webt er \biglittlecap{Aquasphaero}s und lenkt diese (braucht Konzentration), hebt die Scheren zur Anrufung eines Elementars, oder ähnliches. Dies soll die SCs vor die Entscheidung stellen, ob und wie sie ihn beim Zaubern stören. Dabei kann man den SCs mit \textit{Vorbereitung verkürzen}/\textit{Zeit lassen} das Unterbrechen schwerer/einfacher machen. 
 %\smallskip
 
-Die \textbf{Hummerier Leibgarde} schließlich stellt solide Defensivkämpfer dar. Sie haben eine Schere mit Tang, Treibholz und Korallen so umwickelt, dass sie diese als Schild nutzen können (aber nicht mehr für den Doppelangriff). Um Elementarist und/oder Priester zu schützen, verwenden sie gerne Defensiver Kampfstil und Schildwall.
+Die \textbf{Hummerier-Leibgarde} schließlich stellt solide Defensivkämpfer dar. Sie haben eine Schere mit Tang, Treibholz und Korallen so umwickelt, dass sie diese als \textit{Schild} nutzen können (aber nicht mehr für den \textit{Doppelangriff}). Um Elementarist und/oder Priester zu schützen, verwenden sie gerne \textit{Defensiver Kampfstil} und \textit{Schildwall}.
 
+\neuespalte
 
 % Aber Vorsicht! Wenn du das volle Arsenal auffährst, also einige Soldaten angeführt von Priester mit Leibgarde und aus der Ferne unterstützt von Elementarist mit Leibgarde, dann nimmst du schnell deine Heldengruppe auseinander. Achte darauf, dass die Kampfschwierigkeit der Situation angemessen ist und das für die SCs ersichtlich ist, auf was sie sich einlassen. An Land können sie zumindest ganz gut weglaufen.
 
