--- a/band_02/spielhilfen/krustentiereDatenbank.tex
+++ b/band_02/spielhilfen/krustentiereDatenbank.tex
@@ -1,12 +1,12 @@
-\newcommand{\kreaturhummeriersoldat}{\kreatur{Hummerier Soldat}{Schreckliche Ausgeburt der endlosen Tiefen, großer Gegner}{gfx/kreaturen/mythen}{\kreaturkampfwerte{6/11}{9}{2/5 (Land/Wasser)}{4}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch}\trennlinie \kreaturwaffe{Scheren}{0}{10}{10}{3W6+2}{Doppelangriff, Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Partisane}{2}{11}{11}{3W6+7}{}\kreaturkampfvorteile{Kraftvoller Kampf II, Ausfall, Offensiver Kampfstil, Niederwerfen, Hammerschlag}\trennlinie \kreaturattribute{CH 4, FF 2, GE 4, IN 8, KK 16, KL 6, KO 16, MU 10}\kreaturfertigkeiten{Einschüchtern 12, Wachsamkeit 6, Zähigkeit 14}\kreaturinfo{Profane Vorteile}{Abgehärtet I\&II, Schnelle Heilung, Muskelprotz, Zerstörerisch II, Willensstark I}}}
+\newcommand{\kreaturhummeriersoldat}{\kreatur{Hummerier-Soldat}{Schreckliche Ausgeburt der endlosen Tiefen, großer Gegner}{gfx/kreaturen/mythen}{\kreaturkampfwerte{6/11}{9}{2/5 (Land/Wasser)}{4}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch}\trennlinie \kreaturwaffe{Scheren}{0}{10}{10}{3W6+2}{Doppelangriff, Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Partisane}{2}{11}{11}{3W6+7}{}\kreaturkampfvorteile{Kraftvoller Kampf II, Ausfall, Offensiver Kampfstil, Niederwerfen, Hammerschlag}\trennlinie \kreaturattribute{CH 4, FF 2, GE 4, IN 8, KK 16, KL 6, KO 16, MU 10}\kreaturfertigkeiten{Einschüchtern 12, Wachsamkeit 6, Zähigkeit 14}\kreaturinfo{Profane Vorteile}{Abgehärtet I\,\&\,II, Schnelle Heilung, Muskelprotz, Zerstörerisch II, Willensstark I}}}
 %\trennlinie \kreaturinfo{Quelle}{\href{https://dsaforum.de/download/file.php?id=14259}{Krustentiere}}}
 
 
-\newcommand{\kreaturhummerierelementarist}{\kreatur{Hummerier Elementarist}{Gebieter des Unwassers, 'Artillerie' der Hummerier. Großer Gegner.}{gfx/kreaturen/mythen}{\kreaturkampfwerte{5/9}{14}{2/5 (Land/Wasser)}{4}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch}\trennlinie \kreaturwaffe{Scheren}{0}{8}{8}{3W6}{Doppelangriff, Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Spieß}{2}{10}{10}{3W6+2}{}\trennlinie \kreaturattribute{CH 16, FF 2, GE 4, IN 8, KK 14, KL 16, KO 12, MU 16}\kreaturfertigkeiten{Autorität (alle) 16, Wachsamkeit 12, Zähigkeit 12, Elementarkunde 14, Geschichten und Legenden 12}\kreaturinfo{Profane Vorteile}{Abgehärtet I, Schnelle Heilung, Willensstark I+II}\trennlinie \kreaturinfo{AsP}{52}\kreaturinfo{(Un-)Wasser}{17 (Aquasphaero, Herbeirufung des Wassers, Wasserwand, Leib der Wogen, Mahlstrom, Zorn der Elemente)}\kreaturinfo{Magische Vorteile}{Gefäß der Sterne, Verbotene Pforten, Astrale Regeneration, verbesserte  Astrale Regeneration, Bändiger der Elemente, Meister der Wünsche, Kraftlinienmagie, Effezientes Zaubern, Tradition der Hummerier III (Wasserzauber 1x MM extra, ermöglicht Zeit lassen)}}}
+\newcommand{\kreaturhummerierelementarist}{\kreatur{Hummerier-Elementarist}{Gebieter des Unwassers, 'Artillerie' der Hummerier. Großer Gegner.}{gfx/kreaturen/mythen}{\kreaturkampfwerte{5/9}{14}{2/5 (Land/Wasser)}{4}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch}\trennlinie \kreaturwaffe{Scheren}{0}{8}{8}{3W6}{Doppelangriff, Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Spieß}{2}{10}{10}{3W6+2}{}\trennlinie \kreaturattribute{CH 16, FF 2, GE 4, IN 8, KK 14, KL 16, KO 12, MU 16}\kreaturfertigkeiten{Autorität (alle) 16, Wachsamkeit 12, Zähigkeit 12, Elementarkunde 14, Geschichten und Legenden 12}\kreaturinfo{Profane Vorteile}{Abgehärtet I, Schnelle Heilung, Willensstark I\,\&\,II}\trennlinie \kreaturinfo{AsP}{52}\kreaturinfo{(Un-)Wasser}{17 (Aquasphaero, Herbeirufung des Wassers, Wasserwand, Leib der Wogen, Mahlstrom, Zorn der Elemente)}\kreaturinfo{Magische Vorteile}{Gefäß der Sterne, Verbotene Pforten, Astrale Regeneration, verbesserte  Astrale Regeneration, Bändiger der Elemente, Meister der Wünsche, Kraftlinienmagie, Effizientes Zaubern, Tradition der Hummerier III (Wasserzauber 1x MM extra, ermöglicht Zeit lassen)}}}
 
-\newcommand{\kreaturhummerierpriesterkrustentiere}{\kreatur{Hummerier Priester}{Anführer und Veteran der Truppen der tiefen Tochter. Paktierer. Großer Gegner.}{gfx/kreaturen/mythen}{\kreaturkampfwerte{8/14}{14}{2/5 (Land/Wasser)}{4}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch, Paktierer III}\trennlinie \kreaturwaffe{Scheren}{0}{12}{12}{3W6+3}{Doppelangriff, Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Partisane}{2}{11}{11}{3W6+8}{}\kreaturkampfvorteile{Kraftvoller Kampf III, Ausfall, Offensiver Kampfstil, Niederwerfen, Hammerschlag}\trennlinie \kreaturattribute{CH 18, FF 2, GE 4, IN 8, KK 18, KL 10, KO 18, MU 18}\kreaturfertigkeiten{Autorität (alle) 18, Wachsamkeit 10, Zähigkeit 18, Götter und Kulte 12}\kreaturinfo{Profane Vorteile}{Abgehärtet I\&II, Schnelle Heilung, Muskelprotz, Zerstörerisch I+II, Willensstark I+II, Haltet Stand!, Keine Gefangenen!}\trennlinie \kreaturinfo{GuP}{28}\kreaturinfo{Dämonische Hilfe}{15 (Dämonische Stärkung (Derekunde, KO, MU), Meister der Maritimen, Gebieter der Gezeiten, Ertränken)}\kreaturinfo{Karmale Vorteile}{Erzdämonische Tradition III, Dämonische Waffe (wie gesegnete Waffe)}}}
+\newcommand{\kreaturhummerierpriesterkrustentiere}{\kreatur{Hummerier-Priester}{Anführer und Veteran der Truppen der tiefen Tochter, Paktierer, Großer Gegner.}{gfx/kreaturen/mythen}{\kreaturkampfwerte{8/14}{14}{2/5 (Land/Wasser)}{4}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch, Paktierer~III}\trennlinie \kreaturwaffe{Scheren}{0}{12}{12}{3W6+3}{Doppelangriff, Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Partisane}{2}{11}{11}{3W6+8}{}\kreaturkampfvorteile{Kraftvoller Kampf III, Ausfall, Offensiver Kampfstil, Niederwerfen, Hammerschlag}\trennlinie \kreaturattribute{CH 18, FF 2, GE 4, IN 8, KK 18, KL 10, KO 18, MU 18}\kreaturfertigkeiten{Autorität (alle) 18, Wachsamkeit 10, Zähigkeit 18, Götter und Kulte 12}\kreaturinfo{Profane Vorteile}{Abgehärtet I\,\&\,II, Schnelle Heilung, Muskelprotz, Zerstörerisch I\,\&\,II, Willensstark I\,\&\,II, Haltet Stand!, Keine Gefangenen!}\trennlinie \kreaturinfo{GuP}{28}\kreaturinfo{Dämonische Hilfe}{15 (Dämonische Stärkung (Derekunde, KO, MU), Meister der Maritimen, Gebieter der Gezeiten, Ertränken)}\kreaturinfo{Karmale Vorteile}{Erzdämonische Tradition III, Dämonische Waffe (wie gesegnete Waffe)}}}
 
-\newcommand{\kreaturhummerierleibgarde}{\kreatur{Hummerier Leibgarde}{Hummerischer Elitekrieger und Beschützer, großer Gegner}{gfx/kreaturen/mythen}{\kreaturkampfwerte{6/11}{14}{3}{10}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch}\trennlinie \kreaturwaffe{Schere}{0}{17}{14}{3W6}{Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Partisane}{2}{17}{14}{3W6+5}{}\kreaturwaffe{Scherenschild}{0}{17}{14}{1W6+4}{}\kreaturkampfvorteile{Schildkampf III, Ausfall, Offensiver Kampfstil, Defensiver Kampfstil, Gegenhalten, Niederwerfen, Hammerschlag}\trennlinie \kreaturattribute{CH 8, FF 2, GE 4, IN 12, KK 16, KL 6, KO 16, MU 16}\kreaturfertigkeiten{Einschüchtern 14, Wachsamkeit 11, Zähigkeit 16}\kreaturinfo{Profane Vorteile}{Abgehärtet I\&II, Schnelle Heilung, Muskelprotz, Zerstörerisch I+II, Willensstark I+II}}}
+\newcommand{\kreaturhummerierleibgarde}{\kreatur{Hummerier-Leibgarde}{Hummerischer Elitekrieger und Beschützer, großer Gegner}{gfx/kreaturen/mythen}{\kreaturkampfwerte{6/11}{14}{3}{10}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Natürliche Rüstung, Amphibisch}\trennlinie \kreaturwaffe{Schere}{0}{17}{14}{3W6}{Rüstungsbrecher, Umklammern (-4)}\kreaturwaffe{Partisane}{2}{17}{14}{3W6+5}{}\kreaturwaffe{Scherenschild}{0}{17}{14}{1W6+4}{}\kreaturkampfvorteile{Schildkampf III, Ausfall, Offensiver Kampfstil, Defensiver Kampfstil, Gegenhalten, Niederwerfen, Hammerschlag}\trennlinie \kreaturattribute{CH 8, FF 2, GE 4, IN 12, KK 16, KL 6, KO 16, MU 16}\kreaturfertigkeiten{Einschüchtern 14, Wachsamkeit 11, Zähigkeit 16}\kreaturinfo{Profane Vorteile}{Abgehärtet I\,\&\,II, Schnelle Heilung, Muskelprotz, Zerstörerisch I\,\&\,II, Willensstark I\,\&\,II}}}
 
 \newcommand{\kreaturkrabbenschwarm}{\kreatur{Krabbenschwarm}{Schwarm von winzigen Krabben. Großer Gegner}{gfx/kreaturen/daimonid}{\kreaturkampfwerte{1, Koloss I}{1 (für ein einzelnes Tier)}{2}{1}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Amphibisch, Schmerzimmun II, Verwundbarkeit IV (Flächenschaden), Wundblockade (s.u.) . }\trennlinie \kreaturwaffe{Scherenschnitte}{0}{10}{10}{1W6+3}{}\kreaturkampfvorteile{Zusätzliche Attacke I, Immunität (Niederwerfen, Umreißen, u.ä.)}\trennlinie \kreaturfertigkeiten{Wachsamkeit 16, Pirschen 16}\trennlinie \kreaturinfo{Varianten}{Großer Schwarm: Koloss II, Zusätzliche Attacke III.} \kreaturinfo{Wundblockade}{Angriffe mit Einzelziel können höchstens einen Kratzer auf einmal anrichten.}}}
 
@@ -15,5 +15,5 @@
 \newcommand{\kreaturgrossekrabbe}{\kreatur{Schafsgroße Krabbe}{Hungrige, gierige Laurer. Verwachsen und mutiert.}{gfx/kreaturen/daimonid}{\kreaturkampfwerte{3/8 (verwachsener, dicker Panzer)}{4}{2}{1}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Amphibisch }\trennlinie \kreaturwaffe{Scheren}{0}{6}{6}{2W6+4}{Rüstungsbrecher, Doppelangriff}\trennlinie\kreaturfertigkeiten{Wachsamkeit 8, Pirschen 4}}}
 
 \newcommand{\kreaturmutterkrabbe}{\kreatur{Orzugath}{Gehörnter Dämon. Großer Gegner}{gfx/kreaturen/daemon}{\kreaturkampfwerte{5/10, Koloss I}{4}{3}{1}\trennlinie \kreaturvorteile{Angepasst IV (Wasser), Regeneration I, Verseuchung (s.u.)}\trennlinie \kreaturwaffe{Große Schere}{0}{6}{14}{3W6+6}{Umklammern (-8)}\kreaturwaffe{Scharfe Schere}{0}{6}{14}{3W6+6}{Rüstungsbrecher}\kreaturkampfvorteile{Zusätzliche Attacke I}\trennlinie \kreaturattribute{GE 8, KK 28, KL 8}\kreaturfertigkeiten{Wachsamkeit 14, Pirschen 2} \trennlinie 
-\kreaturinfo{Beschwörung}{Invocatio 24}\kreaturinfo{Dienste}{Gewässer versuchen +0 (7 Monate), Kampf (1 Minute) -8} %\trennlinie 
+\kreaturinfo{Beschwörung}{Invocatio 24}\kreaturinfo{Dienste}{Gewässer verseuchen +0 (7 Monate), Kampf (1 Minute) -8} %\trennlinie 
 \kreaturinfo{Verseuchung}{Orzugath verflucht Krustentiere der Umgebung zu unendlichem Hunger und maßlosem Wachstum. Sie sorgt zudem für steten Nachschub, indem sie ausgiebig Laicht.}}}
