--- a/band_02/spielhilfen/spielhilfen.tex
+++ b/band_02/spielhilfen/spielhilfen.tex
@@ -9,7 +9,7 @@ Inzwischen bietet \link{https://ilaris-online.de/app/inhalte/}{Ilaris Online} ei
 Im Folgenden wollen wir einige ausgewählte Spielhilfen detaillierter vorstellen.
 
 \subsection*{Generierungsprogramm Sephrasto}
-\link{https://github.com/Aeolitus/Sephrasto/releases}{Sephrasto} hat in den letzten Jahren erneut eine deutliche Weiterentwicklung durchlaufen und liegt inzwischen in der Version 5 vor.
+\link{https://github.com/Aeolitus/Sephrasto/releases}{Sephrasto} ist in den letzten Jahren -- vor allem von \textbf{Gatsu} erneut deutlich weiterentwickelt worden und liegt inzwischen in der Version 5 vor.
 
 \begin{itemize}
 \item Vollumfassende regelkonforme Charaktererstellung und -steigerung mit zahlreichen Hilfestellungen
@@ -29,13 +29,14 @@ Zahlreiche von der Community erstellte Plugins -- z.\,B. das Manöverkarten-Tool
 
 
 \subsection*{Manöverkarten}
-Eines der Plugins erlaubt, einen Satz Manöverkarten passend zur jeweiligen Figur zu erstellen.
+Ein von \textbf{Gatsu} erarbeitetes Plugin erlaubt, einen Satz Manöverkarten passend zur jeweiligen Figur zu erstellen.
 Dazu gehören die verfügbaren Manöver im Kampf und praktische Regelübersichten.
 Auch der Regeltext aller Zauber und Liturgien liegen dabei auf jeweils einer Karte mit sprechenden Symbolen vor.
+
 So erhältst du bereits mit dem Erstellen deines Charakterbogens deine Optionen im Spiel druckfertig in übersichtlicher Form.
 
 \subsection*{Kreaturendatenbank}
-Auch die \link{https://ilaris-tools.github.io/IlarisDB/db/kreaturen/}{Kreaturen\-datenbank} wurde erheblich weiterentwickelt.
+Auch die \link{https://ilaris-tools.github.io/IlarisDB/db/kreaturen/}{Kreaturen\-datenbank} wurde von \textbf{Lukr} erheblich weiterentwickelt.
 Sie umfasst neben allen Kreaturen des Regelwerks inzwischen auch viele Gegner und NSCs, die andere Spielleitungen in ihrer Vorbereitung erstellt haben.
 Spielwerte stehen so als Konvertierungen für Abenteuer anderer Regeleditionen zur Verfügung.
 
